Fix issues with Quick View badges on small screens.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,10 @@ code {
   @apply text-red-400 font-mono;
 }
 
+.badge {
+  @apply inline-flex items-center rounded-full px-2.5 py-0.5 text-xs font-medium whitespace-nowrap;
+}
+
 /* Tweak the scroll bar. */
 @media screen and (min-width: 640px) {
   ::-webkit-scrollbar {
